# itsoft-test

./: README.md  test_config.xml
Task1/: CMakeLists.txt  task1.cpp
Task2/: CMakeLists.txt
Task2/src/: main.cpp  task2.cpp  task2.hpp
Task2/tests/: CMakeLists.txt  tests_task2.cpp
Task3/: CMakeLists.txt
Task3/src/: main.cpp  task3.cpp  task3.hpp
